[gd_scene load_steps=6 format=3 uid="uid://b1vy45o0cbxlk"]

[ext_resource type="Script" uid="uid://dj1bcacnq58ve" path="res://scripts/wardrobe/storage_cabinet_layout.gd" id="1"]
[ext_resource type="Script" uid="uid://cio6mjjwij4eb" path="res://scripts/wardrobe/slot.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dfp2x8jbfnx2f" path="res://assets/sprites/wardrobe.png" id="3"]
[ext_resource type="Texture2D" uid="uid://ckyaef5gy7qrw" path="res://assets/sprites/placeholder/slot.png" id="4"]
[ext_resource type="PackedScene" uid="uid://c6v8jfs7u3xw1" path="res://scenes/prefabs/shelf_surface.tscn" id="5"]

[node name="StorageCabinetLayout_Simple" type="Node2D"]
script = ExtResource("1")

[node name="CabinetSprite" type="Sprite2D" parent="."]
position = Vector2(-100, -200)
texture = ExtResource("3")
centered = false

[node name="Slots" type="Node2D" parent="."]

[node name="Pos0" type="Node2D" parent="Slots"]
position = Vector2(0, -111)

[node name="SlotA" type="Node2D" parent="Slots/Pos0"]
position = Vector2(-16, 0)
script = ExtResource("2")

[node name="SlotSprite" type="Sprite2D" parent="Slots/Pos0/SlotA"]
position = Vector2(-31, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4")

[node name="ItemAnchor" type="Node2D" parent="Slots/Pos0/SlotA"]
position = Vector2(-31, 0)

[node name="SlotB" type="Node2D" parent="Slots/Pos0"]
position = Vector2(16, 0)
script = ExtResource("2")

[node name="SlotSprite" type="Sprite2D" parent="Slots/Pos0/SlotB"]
position = Vector2(30.999998, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4")

[node name="ItemAnchor" type="Node2D" parent="Slots/Pos0/SlotB"]
position = Vector2(31, 0)

[node name="Pos1" type="Node2D" parent="Slots"]
position = Vector2(0, 76.88)

[node name="ShelfSurface" parent="Slots/Pos1" instance=ExtResource("5")]
shelf_length_px = 152.0
drop_area_height_px = 90.0
